<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayoutSignUp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/signUpLabelLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="21dp"
        android:layout_toEndOf="@+id/imageView3"
        android:text="@string/login" />
    <Button
        android:id="@+id/signUpButtonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_toEndOf="@+id/signUpLabelFirstname"
        android:text="@string/cancel"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    <Button
        android:id="@+id/signUpButtonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/signUpButtonCancel"
        android:layout_alignBottom="@+id/signUpButtonCancel"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/signUpLabelPasswdConf"
        android:text="@string/signUp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    <EditText
        android:id="@+id/signUpTextLastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/signUpLabelLastname"
        android:inputType="text" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/signUpLabelPasswd"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/signUpLabelPasswd"
        android:layout_toStartOf="@+id/signUpLabelLastname"
        app:srcCompat="@drawable/icons8_key" />

    <EditText
        android:id="@+id/signUpTextPasswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/signUpTextLastname"
        android:layout_marginTop="36dp"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/signUpTextPasswdConf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/signUpTextPasswd"
        android:layout_marginTop="37dp"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/signUpTextFirstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/signUpLabelFirstname"
        android:inputType="text" />
    <EditText
        android:id="@+id/signUpTextLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/signUpLabelLogin"
        android:inputType="text" />

    <TextView
        android:id="@+id/signUpLabelLastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpTextFirstname"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/imageView4"
        android:text="@string/lastname" />

    <TextView
        android:id="@+id/signUpLabelPasswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpTextLastname"
        android:layout_marginTop="19dp"
        android:layout_toEndOf="@+id/imageView6"
        android:text="@string/passwd" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/signUpLabelPasswdConf"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/signUpLabelPasswdConf"
        android:layout_toStartOf="@+id/signUpLabelPasswd"
        app:srcCompat="@drawable/icons8_key" />

    <TextView
        android:id="@+id/signUpLabelPasswdConf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpTextPasswd"
        android:layout_marginTop="19dp"
        android:layout_toEndOf="@+id/imageView7"
        android:text="@string/passwdConf" />

    <TextView
        android:id="@+id/signUpLabelFirstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpTextLogin"
        android:layout_marginTop="23dp"
        android:layout_toEndOf="@+id/imageView4"
        android:text="@string/firstname" />
    <TextView
        android:id="@+id/textViewConnexionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signUpTextLogin"
        android:layout_centerHorizontal="true"
        android:text="@string/app_signup"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signUpTextLogin"
        android:layout_alignEnd="@+id/imageView5"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/signUpLabelLogin"
        app:srcCompat="@drawable/icons8_contacts" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signUpTextLastname"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/signUpLabelLastname"
        app:srcCompat="@drawable/icons8_user" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signUpTextFirstname"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/signUpLabelFirstname"
        android:layout_toStartOf="@+id/signUpLabelFirstname"
        app:srcCompat="@drawable/icons8_user" />
</RelativeLayout>
