<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/activityListSeeSessions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/dateListSeeSessions"
        android:layout_marginTop="61dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="48dp" />

    <TextView
        android:id="@+id/dateListSeeSessions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/trashListSeeSessionsDelete"
        android:layout_alignStart="@+id/trashListSeeSessionsDelete"
        android:layout_marginBottom="74dp"
        android:ems="10"
        android:inputType="textPersonName" />
    <Button
        android:id="@+id/buttonListSeeSessionsUpdate"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/activityListSeeSessions"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="178dp"
        android:text="@string/modify_session"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="245dp"
        tools:layout_editor_absoluteY="51dp" />

    <ImageView
        android:id="@+id/trashListSeeSessionsDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textViewASS1"
        android:layout_alignTop="@+id/buttonListSeeSessionsUpdate"
        android:layout_marginTop="14dp"
        app:srcCompat="@drawable/icons8_trash" />

    <TextView
        android:id="@+id/textViewASS1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="23dp"
        android:text="@string/session_activity"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textViewASS2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/dateListSeeSessions"
        android:layout_alignStart="@+id/textViewASS1"
        android:layout_marginBottom="32dp"
        android:text="@string/date_session" />
</RelativeLayout>